--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" sizes="512x512" href="./safeplacelogo.png" />
+    <link
+      rel="icon"
+      sizes="512x512"
+      href="%PUBLIC_URL%/safeplacelogo-512x512.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="./safeplacelogo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/safeplacelogo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
