--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      sizes="512x512"
-      href="%PUBLIC_URL%/safeplacelogo-512x512.png"
-    />
+    <link rel="icon" sizes="700x700" href="%PUBLIC_URL%/safeplacelogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
